Demo/demo/ingress-https.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bbs-ingress
spec:
  tls:
  - hosts:
    - bbs.aju.cn
    secretName: secret-tls
  rules:
  - host: bbs.aju.cn
    http: 
      paths: 
      -  path: /
         backend:
           serviceName: web
           servicePort: 80
