Demo/demo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: example.ctnrs.com
    http: 
      paths: 
      -  path: /
         backend:
           serviceName: web
           servicePort: 80
